src/test/ui/parser/raw/raw-literal-underscore.stderr
error: `_` cannot be a raw identifier
  --> $DIR/raw-literal-underscore.rs:2:9
   |
LL |     let r#_;
   |         ^^^

error: aborting due to previous error

