src/test/ui/parser/raw/raw-literal-underscore.rs
fn main() {
    let r#_;
    //~^ ERROR `_` cannot be a raw identifier
}
